next attempt to fix the problem with bottom part of the website on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1337,7 +1337,8 @@ select {
 }
 
 .navbar__device-appearance {
-  height: 97vh;
+  max-height: -webkit-fill-available;
+  height: 100%;
   margin: 1rem 0 1rem 1rem;
 }
 
@@ -1662,6 +1663,11 @@ select {
   height: 100vh;
   background-color: #ededed;
   overflow: hidden;
+}
+
+.page__container_mobile-sized {
+  max-height: -webkit-fill-available;
+  height: 100%;
 }
 
 .page__container__forms {
